compiler/testData/diagnostics/tests/redeclarations/ScriptAndClassConflict.kt
// FILE: f1.kt
package test

class <!REDECLARATION!>A<!>
class F1

// FILE: A.kts
package test

val x = 1

class F1